# aliv

./: .env  .gitignore  Cargo.toml
src/: main.rs
src/discord/: mod.rs
