[package]
name = "pixcord"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
reqwest = "0.11.22"
thiserror = "1.0.51"
tokio = {version = "1.35.0", features = ["full"]}
serde_json = "1.0"
tokio-tungstenite = { version = "0.21.0", features = ["native-tls"] }
futures-util = "0.3.29"
url = "2.5.0"
